fix: menu z-index

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -1,4 +1,6 @@
-$rmd-dialog-z-index: 1000; // leaflet is around z-index 400
+// leaflet is around z-index 400
+$rmd-dialog-z-index: 1000;
+$rmd-menu-z-index: 1000;
 
 @import "~@react-md/avatar/dist/mixins";
 @import "~@react-md/button/dist/mixins";
